fix: Various UI issues on mobile

--- a/src/features/Cart/cart.module.styl
+++ b/src/features/Cart/cart.module.styl
@@ -106,3 +106,4 @@ $cell-size = (100 - $cell-size-first) * .33
   border none
   float right
   width 50%
+  margin-right 15px
