--- a/src/features/Home/home.module.styl
+++ b/src/features/Home/home.module.styl
@@ -211,7 +211,7 @@ $pager-copy-text()
   color white
   padding $padding-sm-vertical $padding-xl-horizontal
   border-radius 5px
-  margin 20px auto 0px auto
+  margin 20px auto 30px auto
   display none
   +$below(md)
     display inline-block
