--- a/src/features/Nav/nav.module.styl
+++ b/src/features/Nav/nav.module.styl
@@ -24,6 +24,9 @@ $navbar($height, $font-size = 20px)
       cursor pointer
       display block
       $nav-padding($height)
+  button
+    border 0
+    background white
 
 // required to make dropdown menu work
 .navbar
