--- a/src/layouts/main.module.styl
+++ b/src/layouts/main.module.styl
@@ -3,6 +3,8 @@
   min-height 100vh
 .content
   flex 1
+  +$below(md)
+    margin-top 50px
 
 .github-outer-wrapper
   +$below(md)
